[package]
version = "0.1.0"
name = "doc-server"
authors = ["daksh <dak-x@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
convert_case = "0.4"
tokio = { version = "*", features = ["full"] }
warp = "*"
inotify = "*"
